Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL)
-
None
Description
e.g. https://buildbot.mariadb.net/buildbot/builders/kvm-asan/builds/12423
To get a failure locally, do
mtr --no-reorder spider/bugfix.mdev_30392 spider/bugfix.mdev_30727
|
Attachments
Issue Links
- is caused by
-
MDEV-30727 SIGSEGV's in spider_direct_sql_init_body, spider_direct_sql_body, my_hash_insert, thd_ha_data, thd_get_ha_data and safe_mutex_lock, heap-use-after-free in spider_direct_sql_body
-
- Closed
-
- relates to
-
MDEV-34682 Server crashes when calling spider UDF after aria_encrypt_tables is enabled
-
- Closed
-