MDEV-34036 Reset spider_hton_ptr in spider_db_done()

Otherwise spider_direct_sql may still think the spider plugin is
available even after spider_db_done() was called.